# Satisfactory_Planner

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/data/: Building.h  DBMap.h  Item.h  Library.h  Recipe.h
include/plan/: Factory.h  LineTarget.h  ProductLine.h  ProductTarget.h  SubFactory.h  Subfactory.h  TableItem.h  TableSlot.h
resources/: docs-pretty.json  docs.json  pretty.json  resources.qrc
src/: CMakeLists.txt  config.h.in
src/data/: Building.cpp  CMakeLists.txt  Item.cpp  Library.cpp  Recipe.cpp
src/plan/: CMakeLists.txt  Factory.cpp  LineTarget.cpp  ProductLine.cpp  ProductTarget.cpp  Subfactory.cpp  TableItem.cpp
src/proofs/: CMakeLists.txt  main.cpp
src/ui/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  DataSourceDialog.cpp  DataSourceDialog.h  MainWindow.cpp  MainWindow.h  main.cpp  settings.h  util.h
src/ui/elements/: BasicItemButton.cpp  BasicItemButton.h  BuildingTableIcon.cpp  BuildingTableIcon.h  ItemButton.cpp  ItemButton.h  ItemButtonLabel.cpp  ItemButtonLabel.h  ItemIcon.cpp  ItemIcon.h  ItemListModel.cpp  ItemListModel.h  ItemSelectionDialog.cpp  ItemSelectionDialog.h  ItemSelectionIconGrid.cpp  ItemSelectionIconGrid.h  TableIcon.cpp  TableIcon.h
src/ui/mainTable/: ByproductModel.cpp  ByproductModel.h  ByproductsModel.cpp  ByproductsModel.h  CheckboxDelegate.cpp  CheckboxDelegate.h  FactoryTable.cpp  FactoryTable.h  IconListDelegate.cpp  IconListDelegate.h  IngredientIconList.cpp  IngredientIconList.h  IngredientsModel.cpp  IngredientsModel.h  ItemIconDelegate.cpp  ItemIconDelegate.h  ItemViewModel.cpp  ItemViewModel.h  ProductLineEditDialog.cpp  ProductLineEditDialog.h  ProductModel.cpp  ProductModel.h  ProductionPane.cpp  ProductionPane.h  ProductionTable.cpp  ProductionTable.h  ProductionTableModel.cpp  ProductionTableModel.h  RecipeSelectModel.cpp  RecipeSelectModel.h  SpinBoxDelegate.cpp  SpinBoxDelegate.h  SubfacItemListModel.cpp  SubfacItemListModel.h  TableIconDelegate.cpp  TableIconDelegate.h  TargetDelegate.cpp  TargetDelegate.h  TargetModel.cpp  TargetModel.h
src/ui/mainTable/ClockSpeedEditDialog/: ClockSpeedEditDialog.cpp  ClockSpeedEditDialog.h
src/ui/mainTable/PercentEditDialog/: PercentEditDialog.cpp  PercentEditDialog.h
src/ui/mainTable/RecipeSelectDialog/: RecipeIconDelegate.cpp  RecipeIconList.cpp  RecipeSelectDialog.cpp  RecipeSelectDialog.h  RecipeSelectModel.cpp  RecipeSelectModel.h
src/ui/mainTable/recipeSelectDialog/: ProductLineEditDialog.cpp  ProductLineEditDialog.h  RecipeIconDelegate.h  RecipeIconList.cpp  RecipeIconList.h
src/ui/samples/: TestButton.cpp  TestButton.h
src/ui/subfactoryPane/: IconListModel.cpp  IconListModel.h  SubfactoryEditDialog.cpp  SubfactoryEditDialog.h  SubfactoryInfo.cpp  SubfactoryInfo.h  SubfactoryListModel.cpp  SubfactoryListModel.h  SubfactoryPane.cpp  SubfactoryPane.h
